--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ entryother
 initcode
 initcode.out
 kernelmemfs
-mkfs
+mkfs/mkfs
 kernel/kernel
 user/usys.S
 .gdbinit
@@ -22,3 +22,8 @@ xv6.out*
 submissions/
 ph
 barrier
+
+# 
+.cache/
+build/
+__pycache__/
